# fad

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/aur/: PKGBUILD
.github/homebrew/: fad.rb
.github/workflows/: ci.yml  e2e.yml  release.yml
src/: api.rs  apps.rs  auth.rs  commands.rs  config.rs  http.rs  main.rs
