[package]
name = "fad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
indicatif = "0.17"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
url = "2"
zip = "2"
