[package]
name = "fad"
version = "0.1.0"
edition = "2021"
description = "CLI tool to download and install APK/AAB releases from Firebase App Distribution"
license = "MIT"
repository = "https://github.com/ntsk/fad"
readme = "README.md"
keywords = ["firebase", "app-distribution", "android", "cli", "apk"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
dirs = "5"
indicatif = "0.18"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
url = "2"
zip = "2"
