[package]
name = "fad"
version = "0.1.0"
edition = "2021"
description = "CLI tool to upload, download, and install APK/AAB releases on Firebase App Distribution"
license = "MIT"
repository = "https://github.com/ntsk/fad"
readme = "README.md"
keywords = ["firebase", "app-distribution", "android", "cli", "apk"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "ntsk <ntsk@ntsk.jp>"
section = "utils"
priority = "optional"

[dev-dependencies]
mockito = "1"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
dirs = "6"
indicatif = "0.18"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }
open = "5"
rand = "0.10"
reqwest = { version = "0.13", features = ["blocking", "json", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1.0"
url = "2"
zip = "8"
